Phase2/w
athira@INTVMLT2342:/mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/server/build$ make
[ 20%] Building CXX object CMakeFiles/server.dir/source/server.cpp.o
[ 40%] Building CXX object CMakeFiles/server.dir/source/tinyxml2.cpp.o
[ 60%] Linking CXX executable server
[ 60%] Built target server
[ 80%] Building CXX object CMakeFiles/test_server.dir/test/test_server.cpp.o
/mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/server/test/test_server.cpp: In member function ‘virtual void SystemStatsTest_LoadConfigValid_Test::TestBody()’:
/mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/server/test/test_server.cpp:201:15: error: too many arguments to function ‘void loadConfig()’
  201 |     loadConfig("config.xml");  // Call actual function
      |     ~~~~~~~~~~^~~~~~~~~~~~~~
In file included from /mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/server/test/test_server.cpp:160:
/mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/server/test/../include/server.h:19:6: note: declared here
   19 | void loadConfig();
      |      ^~~~~~~~~~
/mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/server/test/test_server.cpp: In member function ‘virtual void SystemStatsTest_LoadConfigInvalid_Test::TestBody()’:
/mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/server/test/test_server.cpp:212:15: error: too many arguments to function ‘void loadConfig()’
  212 |     loadConfig("config.xml");
      |     ~~~~~~~~~~^~~~~~~~~~~~~~
In file included from /mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/server/test/test_server.cpp:160:
/mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/server/test/../include/server.h:19:6: note: declared here
   19 | void loadConfig();
      |      ^~~~~~~~~~
make[2]: *** [CMakeFiles/test_server.dir/build.make:76: CMakeFiles/test_server.dir/test/test_server.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:111: CMakeFiles/test_server.dir/all] Error 2
make: *** [Makefile:101: all] Error 2
